tests/machine/x/c/user_type_literal.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/user_type_literal.c:10:3: error: conflicting types for ‘Person’; have ‘struct <anonymous>’
   10 | } Person;
      |   ^~~~~~
/workspace/mochi/tests/machine/x/c/user_type_literal.c:4:23: note: previous declaration of ‘Person’ with type ‘Person’
    4 | typedef struct Person Person;
      |                       ^~~~~~
/workspace/mochi/tests/machine/x/c/user_type_literal.c:15:3: error: conflicting types for ‘Book’; have ‘struct <anonymous>’
   15 | } Book;
      |   ^~~~
/workspace/mochi/tests/machine/x/c/user_type_literal.c:5:21: note: previous declaration of ‘Book’ with type ‘Book’
    5 | typedef struct Book Book;
      |                     ^~~~

   1: #include <stdio.h>
